# greengrass.provisioning_service

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.py  docker-compose.real.yml  docker-compose.test.yml  run-docker-real-test.sh  run-docker-tests.sh
.github/workflows/: docker-tests.yml
conan_profile/: ubuntu-arm-cross.profile
docker/: Dockerfile.runtime  README.md
docker/mock-aws/: aws-iot-expectations.json  mockserver.properties
docker/real-test/: Dockerfile  README.md  env.example
docker/real-test/scripts/: cleanup-aws.sh  run-real-test.sh  setup-database.sh  verify-provisioning.sh
docker/test/: integration_tests.py  run-integration-tests.sh
docker/test-data/: init-db.sql
docs/: MACOS_CROSS_COMPILE.md
scripts/: greengrass-provisioning.service  run-tests.sh
src/: main.cpp
src/cli/: argument_parser.cpp  argument_parser.h
src/config/: config_generator.cpp  config_generator.h
src/database/: config_database.cpp  config_database.h
src/networking/: connectivity_checker.cpp  connectivity_checker.h
src/provisioning/: greengrass_provisioner.cpp  greengrass_provisioner.h  provisioning_checker.cpp  provisioning_checker.h
src/status/: status_reporter.cpp  status_reporter.h
tests/: CMakeLists.txt  argument_parser_test.cpp  config_database_test.cpp  config_generator_test.cpp  connectivity_checker_test.cpp  provisioning_checker_test.cpp  status_reporter_test.cpp  test_main.cpp
